Version 3.1.x:

* Remove empty "Directories" settings page.
* Fix disappearing configs when base_dir is specified with a trailing slash.
* Prefer $HOME/FS-UAE if it exists, otherwise use $DOCUMENTS/FS-UAE.
* Added lots of game controller configs.
* Support ~/ when  overriding base_dir in config file + create dir if needed.
* Fix layout issues caused by floats not being acceptedby pyqt5 any more.
* Fix loading WHDLoad .lha archives on Windows.
* Some changes to how/where plugins are found.
* Build system update.
* Official builds created with pyinstaller.
* Better support for High-DPI displays in Windows.

Version 3.0.5:

* Packaging change to satisfy Apple's changed notarization process (sigh).
* Workaround for old file database entries with incorrect \ escape.

Version 3.0.4:

* Filename escaping for FS-UAE and .uaem comments when using .lha files as HDs.
* Fixed bug in escaping of \ in archive.py.

Version 3.0.3:

* Fixed crash when starting the Launcher in a KDE environment.

Version 3.0.2:

* Another fix for global WHDLoad quit key.
* Fixed a misleading warning when cyberstorm ROM was not found (3.0.1).

Version 3.0.1:

* Scanner bug prevented Conquests of the Longbow WHDLoad to be recognized.
* The correct kickstart wasn't always loaded.
* Cloanto ROMs were not always decrypted.
* Fix for global WHDLoad quit key.

Version 3.0.0:

* Fixes a problem when launching WHDLoad archived games with OpenRetro
  database enabled and with a matching orhaned variant in the database.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Fixed recently introduced bug when downloading files via cache.

Version 2.9.11dev:

* Plugins can provide files for offline use (WHDLoad, JST, SKick, etc).
* Use newer version of uae-configuration, OSEmu.400.
* Added support for .xz-compressed files.
* GUI options to toggle game mode / governor warning on Linux.

Version 2.9.10dev:

* Support WHDLoad versions 18.4 and 18.5 (game database).